waf-re-ac-aws/infra/security_groups.tf
resource "aws_security_group" "arcadia" {
  name        = format("%s-sg-%s", var.project_prefix, random_id.build_suffix.hex)
  description = "Security group for Arcadia application"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Arcadia nginx proxy"
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "HTTP"
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.admin_src_addr]
    description = "SSH"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = format("%s-sg-%s", var.project_prefix, random_id.build_suffix.hex)
  }
}
